# network-cov-france

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  pyproject.toml
app/: models.py  serializers.py  tests.py  urls.py  views.py
app/management/commands/: save_csv_in_db.py
app/migrations/: 0001_initial.py  0002_alter_location_city.py
app/utils/: gps_by_city_name.py  gps_to_lambert.py  lambert_to_gps.py  reverse_geographic_search.py
config/: settings.py  urls.py
data/: 2018_01_Sites_mobiles_2G_3G_4G_France_metropolitaine_L93.csv
logger_settings/: logger.py
